[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scape-apa"
version = "1.0.1"
authors = [
  { name="Guangzhao Cheng, Tien Le, Lu Cheng. Department of Computer Science, Aalto University.", email="lu.cheng.ac@gmail.com" },
]
description = "A package for estimating alternative polyadenylation events from scRNA-seq data."
readme = "README.md"
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>2",
  "gffutils>=0.11.1",
  "pandas>=1.4.4",
  "scipy>=1.9.3",
  "numpy>=1.23.3",
  "matplotlib>=3.6.2",
  "click>=8.0.4",
  "pysam>=0.19.0",
  "taichi>=1.5.0",
  "pybedtools>=0.9.0",
  "psutil>=5.9.0",
]

[project.scripts]
scape = "scape:main"

[project.urls]
"Homepage" = "https://github.com/chengl7-lab/scape"
"Bug Tracker" = "https://github.com/chengl7-lab/scape/issues"
